[19] Class Cast exception with Record pattern example in editor #157